--- a/TeatroTicket/nbproject/private/private.properties
+++ b/TeatroTicket/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\aluno\\AppData\\Roaming\\NetBeans\\18\\build.properties
+usuario.properties.file=C:\\Users\\aluno\\AppData\\Roaming\\NetBeans\\18\\build.properties
