add: jframe do cadastro, login, menu e compra de ingresso

--- a/TeatroTicket/nbproject/private/private.properties
+++ b/TeatroTicket/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+user.properties.file=C:\\Users\\WC\\AppData\\Roaming\\NetBeans\\22\\build.properties
 usuario.properties.file=C:\\Users\\aluno\\AppData\\Roaming\\NetBeans\\18\\build.properties
