--- a/TeatroTicket/nbproject/project.properties
+++ b/TeatroTicket/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=TeatroABC
-main.class=teatroabc.TeatroABC
+main.class=easyticket.JanelaPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
